--- a/example.env
+++ b/example.env
@@ -1,7 +1,10 @@
+# --- Telegram settings ---
 TELEGRAM_TOKEN = your_bot_token_here
 TELEGRAM_CHANNEL_ID = your_channel_id_here
 
-# --- Configuraciones de Spotify ---
+# --- Spotify settings ---
 SPOTIFY_CLIENT_ID = your_client_id_here
 SPOTIFY_CLIENT_SECRET = your_client_secret_here
+
+# --- Database settings ---
 DB_PASSWORD = your_password_database
