--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,54 @@
-anyio==4.9.0
+annotated-types==0.7.0
+anyio==3.7.1
+async-timeout==5.0.1
+beautifulsoup4==4.13.4
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+dacite==1.9.2
+Deprecated==1.2.18
 dotenv==0.9.9
 exceptiongroup==1.2.2
+fastapi==0.103.2
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
 idna==3.10
+jaconv==0.4.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+mutagen==1.47.0
+platformdirs==4.3.7
 psycopg2==2.9.10
+pydantic==2.11.3
+pydantic_core==2.33.1
+Pygments==2.19.1
+pykakasi==2.3.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-slugify==8.0.4
 python-telegram-bot==22.0
+pytube==15.0.0
+RapidFuzz==3.13.0
+redis==5.2.1
 requests==2.32.3
+rich==13.9.4
+six==1.17.0
 sniffio==1.3.1
+soundcloud-v2==1.6.0
+soupsieve==2.7
+spotdl==4.2.11
+spotipy==2.25.1
+starlette==0.27.0
+syncedlyrics==1.0.1
+text-unidecode==1.3
+typing-inspection==0.4.0
 typing_extensions==4.13.2
+Unidecode==1.4.0
 urllib3==2.4.0
+uvicorn==0.23.2
+websockets==14.2
+wrapt==1.17.2
+yt-dlp==2025.3.31
+ytmusicapi==1.10.3
